css: Make sure images don't overflow the main text body

--- a/css/main.css
+++ b/css/main.css
@@ -436,11 +436,9 @@ table#article-list span.category {
    }
 }
 
-@media only screen and (max-width: 768px) {
 	img {
 		max-width: 93% ! important;
 	}
-}
 
 /* ==========================================================================
    Helper classes
